# django-floor

./: .editorconfig  .gitignore  .isort.cfg  .travis.yml  CHANGELOG  LICENSE  MANIFEST.in  Makefile  PKG-INFO  README.md  TODO.md  deb-debian-7-python2.sh  deb-debian-7-python3.sh  deb-debian-8-python2.sh  deb-debian-8-python3.sh  deb-ubuntu-14.04-15.10-python2.sh  deb-ubuntu-14.04-15.10-python3.sh  deb_fixes.py  debian-7-python2.sh  debian-7-python3.sh  debian-7.sh  debian-8.sh  debian7.sh  debian8.sh  djangofloor-celery.py  djangofloor-createproject.py  djangofloor-gunicorn.py  djangofloor-manage.py  djangofloor-uwsgi.py  local_config.py  manage.py  multideb.py  pycharm_settings.py  requirements.txt  setup.cfg  setup.py  stdeb.cfg  stdeb33.cfg  tox.ini  ubuntu14.04-15.04-python3.sh
EasyDemo/: CHANGELOG  HISTORY.rst  MANIFEST.in  README.md  local_config.py  local_settings.py  setup.py
EasyDemo/easydemo/: __init__.py  defaults.py  forms.py  functions.py  iniconf.py  signals.py  urls.py  views.py
demo/: MANIFEST.in  demo-celery.py  demo-gunicorn.py  demo-manage.py  djangofloor-gunicorn.py  djangofloor-manage.py  djangofloor-uwsgi.py  pycharm_settings.py  setup.py  stdeb-debian-7.cfg  stdeb-debian-8.cfg  stdeb-debian7.cfg  stdeb-debian8.cfg  stdeb-ubuntu-14.04-15.04.cfg  stdeb-ubuntu-14.04-15.10.cfg  stdeb.cfg
demo/demo/: __init__.py  defaults.py  forms.py  iniconf.py  signals.py  tasks.py  urls.py  views.py
djangofloor/: __init__.py  admin.py  apps.py  backends.py  celery.py  checks.py  context_processors.py  dbadapters.py  deb_fixes.py  decorators.py  defaults.py  defaults_install.py  df_pipeline.py  df_redis.py  df_ws4redis.py  empty.py  exceptions.py  forms.py  functions.py  iniconf.py  ldapgroups.py  log.py  middleware.py  models.py  root_urls.py  routers.py  scripts.py  sessions_list.py  settings.py  tasks.py  urls.py  utils.py  views.py  wsgi.py  wsgi_http.py  wsgi_websockets.py
djangofloor/autoconf/: __init__.py  views.py
djangofloor/conf/: __init__.py  auth.py  callables.py  config_values.py  defaults.py  fields.py  mapping.py  merger.py  pipeline.py  providers.py  settings.py  social_providers.py
djangofloor/demo/: __init__.py  defaults.py  signals.py  tasks.py  urls.py  views.py
djangofloor/locale/: README
djangofloor/management/: __init__.py  base.py  dockerize.py
djangofloor/migrations/: 0001_initial.py  0002_notification_notificationread.py  0003_auto_20180822_0654.py
djangofloor/signals/: __init__.py  bootstrap3.py  html.py
djangofloor/templates/: 400.html  403.html  403_csrf.html  404.html  500.html  base.html
djangofloor/templatetags/: __init__.py  djangofloor.py  djangofloor_dev.py  metro_ui.py  pipeline.py
djangofloor/tests/: __init__.py  default_settings_module.py  project_settings_module.py  test_conf.ini  test_conf_config_values.py  test_decorators.py  test_gen_dev_files.py  test_log.py  test_merger.py  test_settings.py  test_views.py  user_settings_module.py
djangofloor/views/: __init__.py  admin.py  allauth.py  auth.py  legacy.py  monitoring.py  search.py
djangofloor/wsgi/: __init__.py  exceptions.py  (+10 more)
doc/: Makefile  make.bat  requirements.txt
(+317 files in other folders)
