# ##############################################################################
#  This file is part of amn3                                             #
#                                                                              #
#  Copyright (C) 2020 Matthieu Gallet <matthieu.gallet@19pouces.net>           #
#  All Rights Reserved                                                         #
#                                                                              #
# ##############################################################################
[metadata]
author = Matthieu Gallet
author_email = djangofloor@19pouces.net
classifiers =
        Development Status :: 5 - Production/Stable
        Framework :: Django :: 1.11
        Framework :: Django :: 2.0
        Framework :: Django :: 2.1
        Framework :: Django :: 2.2
        Framework :: Django :: 3.0
        Framework :: Django :: 4.0
        Natural Language :: English
        Natural Language :: French
        Operating System :: MacOS :: MacOS X
        Operating System :: POSIX :: BSD
        Operating System :: POSIX :: Linux
        Operating System :: Unix
        License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3 :: Only
description = Simple configuration management and websockets with Django.
license = CeCILL-B
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Matthieu Gallet
maintainer_email = djangofloor@19pouces.net
name = djangofloor
url = https://github.com/d9pouces/django-floor/
version = attr: djangofloor.__version__


[options]
include_package_data = True
packages = find:
tests_require =
        tox
        tox-docker
zip_safe = False


[options.entry_points]
console_scripts =
        djangofloor-createproject = djangofloor.scripts:create_project


[options.packages.find]
exclude =
        *.DS_Store
        *.sass-cache*
include = djangofloor*


[bdist_wheel]
universal = 0


[isort]
force_grid_wrap=0
include_trailing_comma=True
line_length=88
multi_line_output=3
profile = black
use_parentheses=True


[mypy]
files=amn3 id_tests tools
ignore_missing_imports=true
python_version = 3.9


[flake8]
ignore = E203, E501, C901, F401, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9


[pydocstyle]
inherit = false
ignore = D100, D101, D102, D103, D104, D105, D106, D107, D203, D205, D212, D213, D400, D403, D415
match = .*\.py
match_dir=amn3
# waiting for a fix of #363


[pycodestyle]
max-line-length = 88


[coverage:report]
fail_under = 91


[tox:tox]
envlist = py36,py37,py38,py39,p310
minversion = 3.4.0
requires = tox-docker

[testenv:{py36,py37,py38,py39,p310}]
commands=python manage.py test
